--- a/styles.css
+++ b/styles.css
@@ -18,32 +18,66 @@ body {
   place-content: center;
   text-align: left;
   color: #e3e3e3;
+  padding: 0;
 }
 
 /* .container {
+  padding: 4rem;
+  margin: 1rem;
 } */
+.container {
+  padding: 4em;
+  /* height: 100vh; */
+}
+.container:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20%;
+  background: rgb(36, 59, 85) 91.1%;
+  height: 100vh;
+  z-index: -1;
+  opacity: 0.2;
+}
 
 h1 {
   margin-top: 0;
-  font-size: 2.5em;
+  color: #fdb44b;
+  font-size: 2em;
 }
 
 p {
-  font-size: 1.2em;
-  margin-bottom: 0.5em;
-  text-transform: uppercase;
+  font-size: 1em;
+  margin: 0.5rem;
+  line-height: 1.5;
+  padding-left: 2em;
+  border-left: 4px solid gray;
 }
 
-span {
+/* /* span {
   position: relative;
-}
+} */
 
-span:before {
+/* span:before {
+  content: "1:30 PM";
+  font-size: 12em;
   position: absolute;
-  content: "";
-  height: 0.2em;
-  width: 80%;
-  bottom: 0.1em;
+  color: #f4f4f4;
   z-index: -1;
-  background: #fdb44b;
+  white-space: nowrap;
+  left: 30%;
+  top: 45%;
+  opacity: 0.1;
+} */
+
+span.heading {
+  font-size: 0.4em;
+  color: #1d2e44;
+  padding: 0.5em;
+  text-transform: uppercase;
+  opacity: 0.5;
+  background-color: #e3e3e3;
+  border-radius: 1em;
+  display: inline-block;
 }
