--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,14 @@ body {
 }
 
 body {
-  background: linear-gradient(
-    109.6deg,
-    rgb(20, 30, 48) 11.2%,
-    rgb(36, 59, 85) 91.1%
+  background: rgb(119, 33, 90);
+  background: radial-gradient(
+    circle,
+    rgba(119, 33, 90, 1) 0%,
+    rgba(69, 70, 116, 1) 10%,
+    rgba(86, 73, 187, 1) 24%,
+    rgba(68, 64, 112, 1) 68%,
+    rgba(99, 198, 198, 1) 100%
   );
   font-family: Montserrat;
   display: grid;
@@ -29,7 +33,7 @@ body {
   padding: 4em;
   /* height: 100vh; */
 }
-.container:before {
+/* .container:before {
   content: "";
   position: absolute;
   top: 0;
@@ -39,7 +43,7 @@ body {
   height: 100vh;
   z-index: -1;
   opacity: 0.2;
-}
+} */
 
 h1 {
   margin-top: 0;
@@ -80,4 +84,14 @@ span.heading {
   background-color: #e3e3e3;
   border-radius: 1em;
   display: inline-block;
+}
+
+.new {
+  color: #63c6c6;
+}
+
+.content {
+  width: 40%;
+  margin-left: 4em;
+  height: 50vh;
 }
